# utilities

./: .gitignore  BUILD  CMakeLists.txt  Makefile  bazel  package.xml
doc/: Doxyfile
doc/html/: CMakeLists_8txt.html  README_8txt.html  annotated.html  balanc_8c-source.html  balanc_8c.html  balanc_8c_source.html  brent_8c-source.html  brent_8c.html  brent_8c_source.html  choldc_8c-source.html  choldc_8c.html  choldc_8c_source.html  classes.html  control_8c-source.html  control_8c.html  control_8c_37f170f557161166764cd60334782659_cgraph.md5  control_8c__incl.md5  control_8c_source.html  data__sets_8c-source.html  data__sets_8c.html  data__sets_8c__incl.md5  data__sets_8c_f1857a7907467ed9aac86e51f9f96ebe_cgraph.md5  data__sets_8c_source.html  data__sets_8h-source.html  data__sets_8h.html  data__sets_8h__dep__incl.md5  data__sets_8h_source.html  dbrent_8c-source.html  dbrent_8c.html  dbrent_8c_source.html  df1dim_8c-source.html  df1dim_8c.html  df1dim_8c_source.html  dfpmin_8c-source.html  dfpmin_8c.html  dfpmin_8c_source.html  dir_000006_000007.html  dir_12bc01b3911d4022a4d76a977d6a89ae.html  dir_17961fe3e3ec1c4bfe4fb895112d8f7a.html  dir_21503d141e69e9fe0d4bc18c3b8ac1b4.html  (+361 more)
doc/html/search/: all_61.html  all_63.html  all_64.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_75.html  classes_68.html  classes_6b.html  classes_6c.html  classes_72.html  defines_61.html  defines_65.html  defines_6d.html  files_63.html  files_64.html  files_6a.html  files_6b.html  files_6c.html  files_70.html  files_73.html  files_75.html  functions_61.html  functions_62.html  functions_63.html  functions_64.html  functions_68.html  functions_69.html  functions_6c.html  functions_6d.html  functions_70.html  (+12 more)
filters/: butterworth_table_order_2_high
include/: .utility_macros.h.swp  statistics.h  utility.h
src/: CMakeLists.txt  Imakefile  Makefile  data_sets.c  dfpmin.c  dlinmin.c  frprmn.c  parm_opt.old.c  parm_opt_test.old.c  statistics.c  svdcmp.c  utility.c
